--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
+    		<groupId>org.scala-lang</groupId>
+    		<artifactId>scala-swing</artifactId>
+    		<version>${scala.version}</version>
+		</dependency> 
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-compiler</artifactId>
             <version>${scala.version}</version>
