--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,17 +23,8 @@
             <artifactId>scala-compiler</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.scala-tools.testing</groupId>
+            <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 
