--- a/pom.xml
+++ b/pom.xml
@@ -52,25 +52,21 @@
                 <version>${scala.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.scala-tools.testing</groupId>
-                <artifactId>specs</artifactId>
-                <version>1.5.0</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.scala-tools.testing</groupId>
+                <groupId>org.scalatest</groupId>
                 <artifactId>scalatest</artifactId>
-                <version>0.9.5</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.8.1</version>
+                <version>1.2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>        
+    </dependencies>
 
     <build>
         <pluginManagement>
@@ -91,4 +87,11 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <repositories>
+        <repository>
+            <id>scala-tools</id>
+            <url>http://scala-tools.org/repo-releases</url>
+        </repository>
+    </repositories>    
 </project>
