--- a/simple-gui/pom.xml
+++ b/simple-gui/pom.xml
@@ -40,16 +40,8 @@
             <artifactId>scala-swing</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.scala-tools.testing</groupId>
-            <artifactId>specs</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-tools.testing</groupId>
+            <groupId>org.scalatest</groupId>
             <artifactId>scalatest</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
 
