--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>no.lau.games.scala-monster</groupId>
     <artifactId>root</artifactId>
-    <version>0.2</version>
+    <version>0.3</version>
     <packaging>pom</packaging>
 
     <name>Scala Monster - The Game - Root</name>
@@ -31,7 +31,7 @@
     </modules>
 
     <properties>
-        <scala.version>2.8.0</scala.version>
+        <scala.version>2.10.4</scala.version>
     </properties>
 
     <dependencyManagement>
@@ -53,8 +53,8 @@
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest</artifactId>
-                <version>1.2</version>
+                <artifactId>scalatest_2.10</artifactId>
+                <version>2.1.3</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -74,7 +74,7 @@
                 <plugin>
                     <groupId>org.scala-tools</groupId>
                     <artifactId>maven-scala-plugin</artifactId>
-                    <version>2.14.1</version>
+                    <version>2.15.2</version>
                     <executions>
                         <execution>
                             <goals>
